<resources>
    <string name="app_name">Consumer Basket</string>
    <string name="app_name_ru">Потребительская корзина</string>
    <string name="save">Сохранить</string>
    <string name="update">Обновить</string>
    <string name="delete">Удалить</string>
    <string name="name">Название</string>
    <string name="weight">Вес</string>
    <string name="price">Цена</string>
    <string name="exit">Выход</string>
    <string name="not_all_fields_are_filled_in">Не все поля заполнены</string>
    <string name="enter_product_name">Введите название продукта</string>
    <string name="enter_weight">Введите вес</string>
    <string name="enter_price">Введите цену</string>
    <string name="update_record">Обновить запись</string>
    <string name="delete_record">Удалить запись</string>
    <string name="enter_details_below">Введите данные ниже</string>
    <string name="the_record_has_been_updated">Запись обновлена</string>
    <string name="cancel">Отмена</string>
    <string name="the_entry_was_added_successfully">Запись успешно добавлена</string>
    <string name="no_product_with_that_name_was_found">Продукт с таким именем не найден</string>
</resources>