<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbarTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name_ru"
        android:background="@color/green"/>

    <include layout="@layout/table_panel"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="350sp">
        
        <ListView
            android:id="@+id/productListLV"
            android:layout_width="wrap_content"
            android:layout_height="350sp"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/saveBTN"
            android:text="@string/save"
            android:backgroundTint="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/updateBTN"
            android:text="@string/update"
            android:backgroundTint="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/deleteBTN"
            android:text="@string/delete"
            android:backgroundTint="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>