<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TableRow>

            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                />

            <EditText
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"/>
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                />

            <EditText
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"/>
        </TableRow>
        <TableRow>

            <TextView
                android:text="@string/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                />

            <EditText
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"/>
        </TableRow>

    </TableLayout>


</LinearLayout>